Foldered, Dockerfile added